--- a/yachts/index.html
+++ b/yachts/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app class="no-js" lang="en" dir="ltr">
+<html ng-app="customersApp" class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -45,8 +45,8 @@
            <div class="top-bar-right">
              <ul class="menu simple vertical medium-horizontal">
                <li><a href="#">MOTOR YACHTS</a></li>
-               <li><a href="#">SPORTFISH</a></li>
-               <li><a href="#">EXPERIENCE</a></li>
+               <li><a href="sportfish/index.html">SPORTFISH</a></li>
+               <li><a href="orders">EXPERIENCE</a></li>
                <li><a href="#">REQUEST</a></li>
                <li><a href="#">OUR STORY</a></li>
                <li><a href="#">FIND A DEALER</a></li>
@@ -260,7 +260,7 @@
     https://foundation.zurb.com/sites/docs/kitchen-sink.html#accordion -->
 
         <div class="grid-x grid-margin-x" data-equalizer data-equalize-on="medium" id="test-eq">
-          <div class="cell medium-4">
+          <div class="cell medium-2">
             <div class="callout" data-equalizer-watch>
               <!-- *Begin Product Card -->
 
@@ -279,7 +279,7 @@
 
             </div>
           </div>
-          <div class="cell medium-4">
+          <div class="cell medium-2">
             <div class="callout" data-equalizer-watch>
               <!-- *Begin Product Card -->
 
@@ -298,7 +298,7 @@
 
             </div>
           </div>
-          <div class="cell medium-4">
+          <div class="cell medium-2">
             <div class="callout" data-equalizer-watch>
               <!-- *Begin Product Card -->
 
