--- a/yachts/index2.html
+++ b/yachts/index2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="customersApp" class="no-js" lang="en" dir="ltr">
+<html ng-app="myApp" class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -485,7 +485,7 @@
       <script src="js/vendor/jquery.js"></script>
       <script src="js/vendor/what-input.js"></script>
       <script src="js/vendor/foundation.js"></script>
-      <script src="js/app.js"></script>
+      <script src="js/app2.js"></script>
 
 
       <script>
